<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="amount">Bill Amount</string>
    <string name="custom_tip_percentage">Tip %</string>
    <string name="tip">Total Tip</string>
    <string name="total">Total Bill</string>
    <string name="fifteen_percent">15%</string>
    <string name="eighteen_percent">18%</string>
    <string name="split_number">Split</string>
	<string name="total_per_person">Per Person</string>
</resources>
