<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:useDefaultMargins="true"
    android:background="@drawable/paper_background"
    tools:context="com.vervibe.tipcalculator.MainActivity" >

    <TextView
        android:id="@+id/amountTextView"
        android:layout_gravity="right"
        android:labelFor="@+id/amountEditText"
        android:text="@string/amount"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:inputType="number"
        android:maxLength="7" >
    </EditText>

       <TextView
           android:id="@+id/amountDisplayTextView"
           android:layout_width="191dp"
           android:layout_height="wrap_content"
           android:layout_column="1"
           android:layout_gravity="fill_horizontal|top"
           android:layout_row="0"
           android:background="#EFEEEC"
           android:padding="@dimen/textview_padding"
           android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/customPercentTextView"
        android:layout_gravity="right|center_vertical"
        android:text="@string/custom_tip_percentage"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <SeekBar
        android:id="@+id/customTipSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:max="30"
        android:progress="18" />

        <TextView
            android:id="@+id/splitTextView"
            android:layout_gravity="right|center_vertical"
            android:text="@string/split_number"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <SeekBar
        android:id="@+id/splitNumberSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:max="25"
        android:progress="1" />
    
    <LinearLayout
        android:id="@+id/percentLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal" >

        <TextView
            android:id="@+id/percent15TextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fifteen_percent"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/percentCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/eighteen_percent"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <TextView
        android:id="@+id/tipTextView"
        android:layout_gravity="right|center_vertical"
        android:text="@string/tip"        
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/tipLinearLayout"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal" >

        <TextView
            android:id="@+id/tip15PercentTextView"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/textview_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/textview_padding" 
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tipCustomTextView"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/textview_padding" 
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <TextView
        android:id="@+id/totalTextView"
        android:layout_gravity="right|center_vertical"
        android:text="@string/total"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/totalLinearLayout"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal" >

        <TextView
            android:id="@+id/total15PercentTextView"
             android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/textview_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/textview_padding" 
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/totalCustomTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/textview_padding" 
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
    
     <TextView
         android:id="@+id/splitNumberDisplayTextView"
         android:layout_gravity="right|center_vertical"
         android:textAppearance="?android:attr/textAppearanceMedium" />

     <LinearLayout
        android:id="@+id/totalPerPersonLinearLayout"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal" >

        <TextView
            android:id="@+id/totalPerPerson15PercentTextView"
             android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/textview_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/textview_padding" 
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/totalPerPersonCustomTextView"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/textview_padding" 
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>    <Space />

</GridLayout>
